# sputnik-test

./: .env.dev  docker-compose.dev.yml
backend/: pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 037881a4e484_add_cascade_delete_to_alerts.py
backend/src/: app.py  models.py  service.py  tasks.py
backend/src/core/: config.py  database.py
backend/src/repositories/: alerts.py  files.py
backend/src/routers/: alerts.py  files.py
backend/src/services/: alerts.py  files.py
